# URLGenerator

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
URLGenerator/: asgi.py  settings.py  urls.py  wsgi.py
urls_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
urls_app/management/commands/: clear_old_urls.py
urls_app/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  permissions.py
users/migrations/: 0001_initial.py
